.provarCaches/00D5f000005vwGkEAI/objects/rootstock__Faux_Lookup_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>rootstock__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Reference_To_Object_Name__c</fullName>
        <label>Reference To Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Source_Object_Field_Name__c</fullName>
        <label>Source Object Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Source_Object_Name__c</fullName>
        <label>Source Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Faux Lookup Config</label>
    <pluralLabel>Faux Lookup Configs</pluralLabel>
</CustomObject>